# effigy

./: .gitignore  INTEGRATION.md  LICENSE  README.md  SECURITY.md  generate_readme.py  pyproject.toml
.github/workflows/: ci.yml
effigy/: __init__.py  __main__.py  audit.py  cli.py  corpus.py  discovery.py  evaluate.py  evolve.py  expand.py  metrics.py  notation.py  parser.py  prompt.py  validators.py
effigy/tests/: test_audit.py  test_evaluate.py  test_evolve.py  test_expand.py  test_parser.py  test_prompt.py  test_validators.py
effigy/tests/fixtures/: test_npc.effigy
