[project]
name = "effigy"
version = "0.3.0"
description = "Dense character notation for LLM-driven NPCs — compact behavioral dossiers with trust-gated content, arc phases, and emotional evolution"
requires-python = ">=3.11"
dependencies = []
license = "MIT"
authors = [
    { name = "Justin Stimatze", email = "justin@justinstimatze.com" },
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/justinstimatze/effigy"
Repository = "https://github.com/justinstimatze/effigy"

[project.optional-dependencies]
discovery = ["anyio", "claude-agent-sdk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = ["tests/", "results/", "test-notations/"]
